--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - pip install nose
   - pip install Pillow
 script:
+  - py.test --cov=pytest_fixture_tools --cov-report=term-missing tests
   - python tests/
   - nosetests --with-coverage 
 after_success:
