--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ install:
   - pip install nose
   - pip install Pillow
 script:
-  - pytest tests
+  - py.test -v --cov-config .coveragerc --cov=mymodule mymodule/tests
 after_success:
   - coveralls
