--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ install:
   - pip install python-coveralls
   - pip install coverage
   - pip install Pillow
+  - pip install nose
 script:
   - pytest -k "not creates_dialogue" tests/
+  - nosetests --with-coverage 
 after_success:
   - coveralls
