--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install python-coveralls
   - pip install coverage
   - pip install Pillow
+  - pip install pytest pytest-cov
 script:
   - pytest -k "not creates_dialogue" tests/
 after_success:
