--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install python-coveralls
   - pip install coverage
   - pip install Pillow
-  - pip install pytest pytest-cov
+  - pip install nose
 script:
   - pytest -k "not creates_dialogue" tests/
 after_success:
