--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ install:
   - pip install pytest-cov
   - pip install Pillow
 script:
-  - pytest -k "not creates_dialogue"--cov= tests/
+  - pytest -k "not creates_dialogue"--cov= tkScribe/
 after_success:
   - coveralls
