--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install pytest-cov
   - pip install Pillow
 script:
-  - py.test coveralls/tests -k "not creates_dialogue"
+  - pytest -k "not creates_dialogue"
   - nosetests --with-coverage 
 after_success:
   - coveralls
