--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ install:
   - pip install pytest-cov
   - pip install Pillow
 script:
-  - pytest -k "not creates_dialogue"
-  - pytest --cov
+  - pytest -k "not creates_dialogue" --cov
 after_success:
   - coveralls
